changes to squid-guifi

--- a/squid-guifi/squid/Dockerfile
+++ b/squid-guifi/squid/Dockerfile
@@ -5,12 +5,10 @@ RUN apt-get update -y && apt-get install --no-install-recommends -y -q squid3 sq
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# Redirect logs for the container
-RUN ln -sf /dev/stdout /var/log/squid3/access.log
-RUN ln -sf /dev/stderr /var/log/squid3/cache.log
+RUN mkdir /config
 
 COPY entrypoint.sh /sbin/entrypoint.sh
-COPY config.yml /config.yml
+COPY squid.conf.template /config/squid.conf.template
 
 ENTRYPOINT ["/sbin/entrypoint.sh"]
 EXPOSE 3128/tcp
